--- a/67250_webdevlabs/boxie-lab2/views/contact.html
+++ b/67250_webdevlabs/boxie-lab2/views/contact.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../static/style.css">
     <meta name="author" content="Bo Xie">
     <meta name="keywords" content="Carnegie Mellon University, Information Systems">
     <meta name="description" content="Your name professional website">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bo Xie</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;500;600;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body  style="font-family: Arial">
+<body>
     <header>
-        <h1>Bo Xie</h1>
+        <h1 id="webname">Bo Xie</h1>
         <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="cv.html">CV</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
-                <li><a href="fun.html">For fun</a></li>
-            </ul>
+            <a href="../index.html">Home</a>
+            <a href="cv.html">CV</a>
+            <a href="contact.html">Contact Me</a>
+            <a href="fun.html">For fun</a>
         </nav>
     </header>
     <div class="main">
@@ -32,24 +34,24 @@
             <input type="submit" value="Submit">
         </form>
 
-        <table style="margin: 0 auto; width: 90%; border-collapse: collapse; text-align: left;">
-            <tr style="background-color: #f2f2f2;">
-                <th style="border: 1px solid #ddd; padding: 12px;">Contact Information</th>
-                <th style="border: 1px solid #ddd; padding: 12px;">Details</th>
+        <table>
+            <tr>
+                <th>Contact Information</th>
+                <th>Details</th>
             </tr>
             <tr>
-                <td style="border: 1px solid #ddd; padding: 12px;">
+                <td>
                     <strong>Email</strong>
                 </td>
-                <td style="border: 1px solid #ddd; padding: 12px;">
+                <td >
                     <p> boxie@andrew.cmu.edu </p>
                 </td>
             </tr>
             <tr>
-                <td style="border: 1px solid #ddd; padding: 12px;">
+                <td>
                     <strong>Phone</strong>
                 </td>
-                <td style="border: 1px solid #ddd; padding: 12px;">
+                <td>
                     <p> 412-539-7693 </p>
                 </td>
             </tr>
