--- a/67250_webdevlabs/boxie-lab4/views/contact.html
+++ b/67250_webdevlabs/boxie-lab4/views/contact.html
@@ -60,8 +60,8 @@
                 
     </div>  
     <footer>
-        <p>&copy; 2025 Designed and Coded by Bo Xie</p>
-    </footer>
+        <p id="copyYear"> Designed and Coded by Bo Xie &copy;</p>
+    </footer> 
     
 </body>
 </html>
