--- a/67250_webdevlabs/boxie-lab4/views/fun.html
+++ b/67250_webdevlabs/boxie-lab4/views/fun.html
@@ -26,7 +26,8 @@
     </header>
     <div class="main">
         <h2>Things I love to do for fun</h2>
-        <ul>
+        <button id="seeMoreButton" onclick="showList()">Click to see...</button>
+        <ul id="funList" style="display: none;">
             <li>Soccer</li>
             <li>Watching movies</li>
             <li>Sleeping</li>
@@ -34,8 +35,8 @@
         </ul>
     </div>  
     <footer>
-        <p>&copy; 2025 Designed and Coded by Bo Xie</p>
-    </footer>
+        <p id="copyYear"> Designed and Coded by Bo Xie &copy;</p>
+    </footer> 
     
 </body>
 </html>
